[package]
name = "apocalypse"
version = "0.6.0"
license = "MIT"
description = "Simple actor framework for Rust"
repository = "https://github.com/Malanche/apocalypse.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2021"
keywords = ["actor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
full_log = []
ws = ["cataclysm", "bytes"]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
log = {version = "0.4.20", features = ["std"]}
tokio = {version = "1.36.0", features = ["full"]}
chrono = "0.4.33"
futures = "0.3.30"
serde = {version = "1.0.196", features = ["derive"], optional = true}
bincode = "1.3.3"
bytes = {version = "1.5.0", optional = true}
cataclysm = {path = "../cataclysm/cataclysm", version = "0.3.0-beta.1", features=["stream", "ws"], optional = true}

[dev-dependencies]
criterion = {version = "0.3.5", features = ["async_tokio"]}
colored = "2.0.0"
winapi = "0.3.9"
chrono = "0.4.19"

[[bench]]
name = "per_second"
harness = false