[package]
name = "apocalypse"
version = "0.6.3"
license = "MIT"
description = "Simple actor framework for Rust"
repository = "https://github.com/Malanche/apocalypse.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2021"
keywords = ["actor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
full_log = []
ws = ["cataclysm", "bytes"]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
log = {version = "0.4.22", features = ["std"]}
tokio = {version = "1.40.0", features = ["full"]}
chrono = "0.4.38"
futures = "0.3.30"
serde = {version = "1.0.210", features = ["derive"], optional = true}
bincode = "1.3.3"
bytes = {version = "1.7.2", optional = true}
cataclysm = {path = "../cataclysm/cataclysm", version = "0.3.0-beta.3", features=["stream", "ws"], optional = true}

[dev-dependencies]
criterion = {version = "0.5.1", features = ["async_tokio"]}
colored = "2.0.0"
winapi = "0.3.9"
chrono = "0.4.38"

[[bench]]
name = "per_second"
harness = false