[package]
name = "apocalypse"
version = "0.6.12"
license = "MIT"
description = "Simple actor framework for Rust"
repository = "https://github.com/Malanche/apocalypse.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2021"
keywords = ["actor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
full_log = []
ws = ["cataclysm", "bytes"]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
log = {version = "0.4.22", features = ["std"]}
tokio = {version = "1.44.1", features = ["full"]}
chrono = "0.4.40"
futures = "0.3.31"
serde = {version = "1.0.219", features = ["derive"], optional = true}
bincode = "1.3.3"
bytes = {version = "1.10.1", optional = true}
cataclysm = {path = "../cataclysm/cataclysm", version = "0.5.2", features=["stream", "ws"], optional = true}

[dev-dependencies]
criterion = {version = "0.5.1", features = ["async_tokio"]}
colored = "2.0.0"
winapi = "0.3.9"
chrono = "0.4.40"

[[bench]]
name = "per_second"
harness = false